--- a/packages/ubuntu_desktop_installer/pubspec.yaml
+++ b/packages/ubuntu_desktop_installer/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.0.3
   yaru: ^0.0.8
   carousel_slider: ^4.0.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
