--- a/packages/ubuntu_desktop_installer/pubspec.yaml
+++ b/packages/ubuntu_desktop_installer/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   tuple: ^2.0.0
   url_launcher: ^6.0.3
   yaru: ^0.0.8
-  carousel_slider: ^4.0.0
   form_field_validator: ^1.1.0
+  encrypt: ^5.0.0
 
 dev_dependencies:
   flutter_test:
